<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- It is a simple layout so linearLayout is less computational heavy-->
    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/medium"
        android:paddingRight="@dimen/medium"
        android:gravity="center"
        android:paddingBottom="@dimen/medium"
        tools:context=".LoginFragment">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"/>

        <Button
            android:id="@+id/sign_in"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extra_large"
            android:text="@string/action_sign_in" />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small"
            android:text="@string/action_sign_up" />

    </LinearLayout>
</layout>